feat: change spawn endpoint to npcs
